@@ -7,7 +7,7 @@
 	<packaging>war</packaging>
 	<name>Implementation of the RMéS metadata API</name>
 	
-	<version>2.0.3</version>
+	<version>2.0.4</version>
 	
 	<properties>
 		<title>API RM\u00e9S</title>
@@ -19,11 +19,11 @@
 		<jersey.version>2.29.1</jersey.version>
 		<jackson.version>2.10.1</jackson.version>
 		<jakarta.version>4.0.3</jakarta.version>
-		<log.version>2.13.3</log.version>
+		<log.version>2.14.0</log.version>
 		<swagger.version>2.0.10</swagger.version>
 		<junit.version>5.7.0</junit.version>
-		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-		
+		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+				
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		
@@ -31,9 +31,16 @@
 		<!-- Configuration Sonar -->
 		<sonar.exclusions>src/main/java/fr/insee/rmes/queries/**/*,
 			src/main/java/fr/insee/rmes/modeles/**/*</sonar.exclusions>
-		<sonar.projectKey>${project.groupId}.${project.artifactId}</sonar.projectKey>
+		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
 		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
-		
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <sonar.language>java</sonar.language>
+        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+        <version.maven-jacoco>0.8.5</version.maven-jacoco>
+		<version.maven-sonar>3.7.0.1746</version.maven-sonar>
+		 <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
+
 	</properties>
 	
 	<dependencies>
@@ -200,50 +207,97 @@
 		      <filtering>true</filtering>
 		    </resource>
   		  </resources>   
+  		<plugins>
+			<plugin>
+			    <groupId>org.sonarsource.scanner.maven</groupId>
+			    <artifactId>sonar-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+			    <groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>test</phase>
+						<goals>
+				    		<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>	
+  		</plugins>  
+  		  
   		  
 		<pluginManagement>
 			<plugins>
-				<!-- Plugin lancement des tests -->
+
+				<!-- Pour l'exécution des tests unitaires -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin.version}</version>
+				<!-- https://carlobertoldi.wordpress.com/2012/03/12/maven-unit-tests-and-those-funny-characters/ -->
+				<configuration>
+       				 <junitArtifactName>junit:junit</junitArtifactName>
+        			<encoding>UTF-8</encoding>
+       				 <inputEncoding>UTF-8</inputEncoding>
+        			<outputEncoding>UTF-8</outputEncoding>
+					<!-- permet la surcharge de maven-surefire-plugin tout en fonctionnant avec jacoco -->
+					<!-- <argLine>${argLine}</argLine>	MAVEN surcharge with properties	 -->
+    			</configuration>
+
+				<executions>
+					<execution>
+						<id>test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<skip>false</skip>
+							<includes>
+								<include>**/*Test.java</include>
+							</includes>
+							<encoding>UTF-8</encoding>
+						</configuration>
+
+					</execution>
+				</executions>
+			</plugin>
+				
+				
 				<plugin>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>${maven-surefire-plugin.version}</version>
-					<configuration>
-						<includes>
-							<include>**/*Test.java</include>
-						</includes>
-					</configuration>
-					<dependencies>
-						<dependency>
-							<groupId>org.junit.platform</groupId>
-							<artifactId>junit-platform-surefire-provider</artifactId>
-							<version>1.2.0</version>
-						</dependency>
-					</dependencies>
-				</plugin>
+                	<groupId>org.sonarsource.scanner.maven</groupId>
+                	<artifactId>sonar-maven-plugin</artifactId>
+                	<version>${version.maven-sonar}</version>
+            	</plugin>
+				
 	
 				<!-- Plugin pour prise en compte des tests sur SonarQube plate-forme innovation -->
 				<plugin>
 					<groupId>org.jacoco</groupId>
-					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.8.4</version>
-					<executions>
-						<execution>
-							<goals>
-								<goal>prepare-agent</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>jacoco-report</id>
-							<phase>test</phase>
-							<goals>
-								<goal>report</goal>
-							</goals>
-							<!-- default target/jscoco/site/* -->
-							<configuration>
-								<outputDirectory>target/jacoco-report</outputDirectory>
-							</configuration>
-						</execution>
-					</executions>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>${version.maven-jacoco}</version>
+						<executions>
+							<execution>
+								<id>default-prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>report</id>
+								<phase>report</phase>
+								<goals>
+									<goal>report-aggregate</goal>
+								</goals>
+							</execution>
+						</executions>
 				</plugin>
 				
 				<!-- Generate openapi.json , see : https://github.com/openapi-tools/swagger-maven-plugin-->
